snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha512
586d6df2a22b804cf8469a271dab07aef69b18be3e65d42d22e2f574bf6b126330e1c2f39fa3cc0c62779ccfd12f5f901a0e33c59671ba37aa155194ebecfc54